--- a/contact/index.html
+++ b/contact/index.html
@@ -7,5 +7,5 @@ title: Contact
 <div style="height: 50px;"><!--padding-->&nbsp;</div>
 
 <div class="bg-dark">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScor06NkMxfPu8oV-vZO0qnDHYRlW7Dk4Oq1WUQ_N8RgTWjfg/viewform?embedded=true" class="center-block" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScor06NkMxfPu8oV-vZO0qnDHYRlW7Dk4Oq1WUQ_N8RgTWjfg/viewform?embedded=true" class="center-block" style="width: 640px; height: 700px; max-width: 100%;" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </div>
