--- a/_Projects/SunriseAlarmClock.html
+++ b/_Projects/SunriseAlarmClock.html
@@ -224,7 +224,7 @@ img: sunriseAlarmFiles/finished.jpg
             <li>set the desired times and days (referencing how the flags work) for each alarm,</li>
             <li>restart the CLI and let it run.</li>
         </ol> 
-        Obviously this is far from ideal, but it got the our alarm clock up and running again about a week sooner than it would have been if I had pressed for either a more complete CLI or web interface.
+        Obviously this is far from ideal, but it got our alarm clock up and running again about a week sooner than it would have been if I had pressed for either a more complete CLI or web interface.
     </p>
 
     <div id="Where">
