--- a/_Projects/SunriseAlarmClock.html
+++ b/_Projects/SunriseAlarmClock.html
@@ -246,7 +246,7 @@ img: sunriseAlarmFiles/finished.jpg
 
 
     <p>
-        I realized after the fact that I should have used the silk screen to label the Vin, Control, Ground pins as well as the Collector, Emmitter, and Gate pins on the transistor.
+        I realized after the fact that I should have used the silk screen to label the Vin, Control, Ground pins as well as the Collector, Emmitter, and Base pins on the transistor.
     </p>
     <div class="bg-white">
         <img src="sunriseAlarmFiles/labeledPCB.png" class="code"/>
