--- a/_Projects/sunriseAlarmFiles/firstCode.html
+++ b/_Projects/sunriseAlarmFiles/firstCode.html
@@ -1,5 +1,9 @@
 <!-- HTML generated using hilite.me -->
-<div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><table><tr><td><pre style="margin: 0; line-height: 125%">
+<div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
+  <table>
+    <tr>
+      <td>
+        <pre style="margin: 0; line-height: 125%">
         1
         2
         3
@@ -419,7 +423,10 @@
       417
       418
       419
-      420</pre></td><td><pre style="margin: 0; line-height: 125%"><span style="color: #557799">#include &lt;Arduino.h&gt;</span>
+      420</pre>
+    </td>
+    <td><pre style="margin: 0; line-height: 125%"><span style="color: #557799">
+      #include &lt;Arduino.h&gt;</span>
       
       <span style="color: #557799">#include &lt;ESP8266WiFi.h&gt;</span>
       <span style="color: #557799">#include &lt;ESP8266WiFiMulti.h&gt;</span>
