--- a/_Projects/SunriseAlarmClock.html
+++ b/_Projects/SunriseAlarmClock.html
@@ -164,7 +164,7 @@ img: sunriseAlarmFiles/finished.jpg
     </p>
 
     <p>
-            I decided to increase the input resistor to 1k and see what that did. That dropped the expected current down to 3mA, which is a sufficiently low.
+            I decided to increase the input resistor to 1k and see what that did. That dropped the expected current down to 3mA, which is sufficiently low.
     </p>
 
     <p>Conveniently, this meant I could re-use the same boards I had made earlier and just swap one of the resistors for a higher value.</p>
