fixing alarm label picture background

--- a/_Projects/SunriseAlarmClock.html
+++ b/_Projects/SunriseAlarmClock.html
@@ -129,7 +129,7 @@ img: sunriseAlarmFiles/finished.jpg
         we were pretty sure we liked it and that I should proceed to making it a little more permanent. 
         <br/>
         So, I took the schematic for the driver and used MultiSim/Ultiboard desktop (which I have access to through my day job) and designed a PCB. 
-        I ordered off to <a href="https://oshpark.com/shared_projects/x42wQTAC" target="_blank">Osh Park</a> and had a couple made.
+        I ordered off to <a href="https://oshpark.com/shared_projects/x42wQTAC" target="_blank">Oshpark</a> and had a couple made.
         <br/>
         I soldered one up, and that was the install that went into place in our new apartment (there was a move in there that caused a delay in getting things done).
     </p>
@@ -240,7 +240,7 @@ img: sunriseAlarmFiles/finished.jpg
     <p>
         And here's where you can download my Gerber files (or order the board) on
         <a target="_blank" href="https://oshpark.com/shared_projects/x42wQTAC">
-            Osh Park
+            Oshpark
         </a>.
     </p>
 
@@ -248,7 +248,7 @@ img: sunriseAlarmFiles/finished.jpg
     <p>
         I realized after the fact that I should have used the silk screen to label the Vin, Control, Ground pins as well as the Collector, Emmitter, and Base pins on the transistor.
     </p>
-    <div class="bg-white">
+    <div style="background-color: lightgray;">
         <img src="sunriseAlarmFiles/labeledPCB.png" class="code"/>
     </div>
 
