creating support page

--- a/support/index.html
+++ b/support/index.html
@@ -7,5 +7,11 @@ title: Support
 <div style="height: 50px;"><!--padding-->&nbsp;</div>
 
 <div class="bg-dark">
-<h1>Coming Soon. . .</h1>
+    <h1 class="center">Hello.</h1>
+    <p class="center">
+        I want to help solve the world's challenges by making tools and programs that make our lives easier. Will you support me in this endeavor?
+    </p>
+    <div class="center">
+            <a href="https://www.patreon.com/bePatron?u=14983863" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+    </div>
 </div>
