adding tags to sunrise alarm project. Removing category for now

--- a/_Projects/SunriseAlarmClock.html
+++ b/_Projects/SunriseAlarmClock.html
@@ -2,7 +2,8 @@
 layout: project
 title: Sunrise Alarm Clock
 img: sunriseAlarmFiles/finished.jpg
-category: Raspberry Pi 0 + Python
+# category: Raspberry Pi 0 + Python
+tags: Raspberry-Pi-0 Python Circuits Maker
 ---
 
 
