fixing image sizes

--- a/_Projects/SunriseAlarmClock.html
+++ b/_Projects/SunriseAlarmClock.html
@@ -136,7 +136,7 @@ tags: Raspberry-Pi-0 Python Circuits Maker
         I soldered one up, and that was the install that went into place in our new apartment (there was a move in there that caused a delay in getting things done).
     </p>
 
-    <img src="sunriseAlarmFiles/pcbFirstPass.jpg" class="code"/>
+    <img src="sunriseAlarmFiles/pcbFirstPass.jpg" class="circuit"/>
 
     <p>
         Around this time, we started having issues with my Wi-Fi router 
@@ -162,7 +162,8 @@ tags: Raspberry-Pi-0 Python Circuits Maker
         Now, the original circuit design would pull about 30 mA, which is 
         <a target="_blank" href="https://www.element14.com/community/thread/20982/l/raspberry-pi-gpio-pin-max-current?displayFullThread=true">
             too high for the RasPi-0 gpio pins
-        </a>; so, it was time to rev the hardware again.
+        </a>; 
+        so, it was time to rev the hardware again.
     </p>
 
     <p>
@@ -209,7 +210,7 @@ tags: Raspberry-Pi-0 Python Circuits Maker
         One last thing I had to take care of, piping 5V through the RasPi was not working, so I soldered a barrel jack to provide Vin to my LED Driver, with a ground tied to the RasPi.
     </p>
 
-    <img class="code" src="sunriseAlarmFiles/finished.jpg"/>
+    <img class="circuit" src="sunriseAlarmFiles/finished.jpg"/>
 
     <p>
         Due to the fact that we decided we liked this, I opted to shorten my time to market by delivering the absolute bare minimum needed to make it work.
