--- a/support/index.html
+++ b/support/index.html
@@ -9,7 +9,11 @@ title: Support
 <div class="bg-dark">
     <h1 class="center">Hello</h1>
     <p class="center">
-        I want to help solve the world's challenges by making tools and programs that make our lives easier. Will you support me in this endeavor?
+        I want to help solve the world's challenges by making tools and programs that make our lives easier.
+        <br/>
+        Everything published on this site is <span title="As in, free to use, (if a specific license applies it will be posted), but if you want to give me some coffee money I'm not going to say no.">Free as in Coffee</span>.
+        <br/>
+        Will you support me in this endeavor?
     </p>
     <div class="center">
             <a href="https://www.patreon.com/bePatron?u=14983863" class="btn btn-default btn-l">Support on Patreon</a>
