add paypal link

--- a/support/index.html
+++ b/support/index.html
@@ -16,6 +16,10 @@ title: Support
         Will you support me in this endeavor?
     </p>
     <div class="center">
-            <a href="https://www.patreon.com/bePatron?u=14983863" class="btn btn-default btn-l">Support on Patreon</a>
+            <a href="https://www.patreon.com/bePatron?u=14983863" class="btn btn-default btn-l" target="_blank">Support on Patreon</a>
+            <br/>
+            --OR--
+            <br/>
+            <a href="https://paypal.me/mshafertech" class="btn btn-default btn-1" target="_blank">Support through PayPal</a>
     </div>
 </div>
