--- a/_Comics/001/index.html
+++ b/_Comics/001/index.html
@@ -1,6 +1,6 @@
 ---
 image: stereo_types_dark.png
-image_title: "typedef Stereo = Tuple<Audio<Left, Right>>"
+image_title: "typedef Stereo = Tuple<Audio<Left>, Audio<Right>>"
 merch: https://teespring.com/audio-signals-stereotype?blog=comics
 merch_img: merch.jpg
 layout: comic
