add buy me a coffee link

--- a/support/index.html
+++ b/support/index.html
@@ -21,5 +21,9 @@ title: Support
             --OR--
             <br/>
             <a href="https://paypal.me/mshafertech" class="btn btn-default btn-1" target="_blank">Support through PayPal</a>
+            <br/>
+            --OR--
+            <br/>
+            <a href="https://www.buymeacoffee.com/mshafer1" class="btn btn-default btn-1" target="_blank">Buy me a coffee</a>
     </div>
 </div>
