add amazon link

--- a/support/index.html
+++ b/support/index.html
@@ -25,5 +25,15 @@ title: Support
             --OR--
             <br/>
             <a href="https://www.buymeacoffee.com/mshafer1" class="btn btn-default btn-1" target="_blank">Buy me a coffee</a>
+            <br/>
+            --OR--
+            <br/>
+            <a target="_blank"
+            href="https://www.amazon.com/b?_encoding=UTF8&tag=mshafertechit-20&linkCode=ur2&linkId=32cd82131398464c947c0c63d85edcd7&camp=1789&creative=9325&node=172456"
+            class="btn btn-default btn-1">Support by shopping on Amazon</a> <img src="//ir-na.amazon-adsystem.com/e/ir?t=mshafertechit-20&l=ur2&o=1" width="1" height="1" border="0" alt=""
+            style="border:none !important; margin:0px !important;" />
+            <br/>
+            (affiliate link, just do your normal shopping)
+            
     </div>
 </div>
