--- a/support/index.html
+++ b/support/index.html
@@ -16,15 +16,16 @@ title: Support
         Will you support me in this endeavor?
     </p>
     <div class="center">
-            <a href="https://www.patreon.com/bePatron?u=14983863" class="btn btn-default btn-l" target="_blank">Support on Patreon</a>
+            <!-- <a href="https://www.patreon.com/bePatron?u=14983863" class="btn btn-default btn-l" target="_blank">Support on Patreon</a>
             <br/>
             --OR--
-            <br/>
+            <br/> -->
             <a href="https://paypal.me/mshafertech" class="btn btn-default btn-1" target="_blank">Support through PayPal</a>
             <br/>
             --OR--
             <br/>
             <a href="https://www.buymeacoffee.com/mshafer1" class="btn btn-default btn-1" target="_blank">Buy me a coffee</a>
+            <!--
             <br/>
             --OR--
             <br/>
@@ -33,7 +34,6 @@ title: Support
             class="btn btn-default btn-1">Support by shopping on Amazon</a> <img src="//ir-na.amazon-adsystem.com/e/ir?t=mshafertechit-20&l=ur2&o=1" width="1" height="1" border="0" alt=""
             style="border:none !important; margin:0px !important;" />
             <br/>
-            (affiliate link, just do your normal shopping)
-            
+            (affiliate link, just do your normal shopping) -->
     </div>
 </div>
