update buy-me-a-coffee and bio links

--- a/support/index.html
+++ b/support/index.html
@@ -24,7 +24,7 @@ title: Support
             <br/>
             --OR--
             <br/>
-            <a href="https://www.buymeacoffee.com/mshafer1" class="btn btn-default btn-1" target="_blank">Buy me a coffee</a>
+            <a href="https://www.buymeacoffee.com/makerByNight" class="btn btn-default btn-1" target="_blank">Buy me a coffee</a>
             <!--
             <br/>
             --OR--
